--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>Semestre IV</h2>
     <div class="ramo no-disponible" data-id="BSC-221" data-nombre="Organizaciones" data-descripcion="Sin requisito">Organizaciones</div>
     <div class="ramo no-disponible" data-id="BSC-222" data-nombre="Estadísticas para las Ciencias Sociales" data-descripcion="Requiere BSC-212" data-requisitos="BSC-212">Estadísticas para las Ciencias Sociales</div>
-    <div class="ramo no-disponible" data-id="BSC-223" data-nombre="Taller de Diseño de Proyectos" data-descripcion="Sin requisito">Taller de Diseño de Proyectos</div>
+    <div class="ramo no-disponible" data-id="BSC-223" data-nombre="Taller de Diseño de Proyectos" data-descripcion="Requiere BSC-111,BSC-112,BSC-113,BSC-114,BSC-115,BSC-116,BSC-121,BSC-122,BSC-123,BSC-124,BSC-125,BSC-126,IFG-100,BSC-211,BSC-212,BSC-213,BSC-214,BSC-215,IFG-200" data-requisitos="BSC-111,BSC-112,BSC-113,BSC-114,BSC-115,BSC-116,BSC-121,BSC-122,BSC-123,BSC-124,BSC-125,BSC-126,IFG-100,BSC-211,BSC-212,BSC-213,BSC-214,BSC-215,IFG-200" >Taller de Diseño de Proyectos</div>
     <div class="ramo no-disponible" data-id="BSC-224" data-nombre="Economía y Territorio" data-descripcion="Requiere BSC-125" data-requisitos="BSC-125">Economía y Territorio</div>
     <div class="ramo no-disponible" data-id="ICM-225" data-nombre="Marketing I" data-descripcion="Sin requisito">Marketing I</div>
     <div class="ramo no-disponible" data-id="IFG-300" data-nombre="Inglés III" data-descripcion="Requiere IFG-200" data-requisitos="IFG-200">Inglés III</div>
@@ -56,6 +56,7 @@
     <div class="ramo no-disponible" data-id="ICM-314" data-nombre="Contabilidad Financiera" data-descripcion="Sin requisito">Contabilidad Financiera</div>
     <div class="ramo no-disponible" data-id="ICM-315" data-nombre="Macroeconomía para la Gestión" data-descripcion="Requiere BSC-125" data-requisitos="BSC-125">Macroeconomía para la Gestión</div>
     <div class="ramo no-disponible" data-id="ICM-316" data-nombre="Marketing II" data-descripcion="Requiere ICM-225" data-requisitos="ICM-225">Marketing II</div>
+    <div class="ramo no-disponible" data-id="MFG-114" data-nombre="Introducción a la Fe" data-descripcion="Sin requisito">Introducción a la Fe</div>
   </div>
   <div class="semestre">
     <h2>Semestre VI</h2>
@@ -64,6 +65,9 @@
     <div class="ramo no-disponible" data-id="ICM-323" data-nombre="Organización Industrial" data-descripcion="Requiere BSC-214,BSC-215" data-requisitos="BSC-214,BSC-215">Organización Industrial</div>
     <div class="ramo no-disponible" data-id="ICM-324" data-nombre="Contabilidad de Gestión" data-descripcion="Requiere ICM-314" data-requisitos="ICM-314">Contabilidad de Gestión</div>
     <div class="ramo no-disponible" data-id="ICM-325" data-nombre="Emprendimiento" data-descripcion="Requiere ICM-311,ICM-316" data-requisitos="ICM-311,ICM-316">Emprendimiento</div>
+    <div class="ramo no-disponible" data-id="CFG-1" data-nombre="Certificación I" data-descripcion="Sin requisito">Certificación I</div>
+    <div class="ramo no-disponible" data-id="MFG-216" data-nombre="Ética Cristiana" data-descripcion="Sin requisito">Ética Cristiana</div>
+    
   </div>
   <div class="semestre">
     <h2>Semestre VII</h2>
@@ -73,32 +77,36 @@
     <div class="ramo no-disponible" data-id="ICM-414" data-nombre="Gestión Financiera" data-descripcion="Requiere ICM-322" data-requisitos="ICM-322">Gestión Financiera</div>
     <div class="ramo no-disponible" data-id="ICM-415" data-nombre="Innovación Empresarial" data-descripcion="Requiere ICM-325" data-requisitos="ICM-325">Innovación Empresarial</div>
     <div class="ramo no-disponible" data-id="ICM-416" data-nombre="Sustentabilidad y RSE" data-descripcion="Requiere ICM-321" data-requisitos="ICM-321">Sustentabilidad y RSE</div>
+    <div class="ramo no-disponible" data-id="CFG-2" data-nombre="Certificación II" data-descripcion="Sin requisito">Certificación II</div>
   </div>
   <div class="semestre">
     <h2>Semestre VIII</h2>
-    <div class="ramo no-disponible" data-id="ICM-421" data-nombre="Práctica Inicial" data-descripcion="Sin requisito">Práctica Inicial</div>
+    <div class="ramo no-disponible" data-id="ICM-421" data-nombre="Práctica Inicial" data-descripcion="Requiere BSC-221,BSC-222,BSC-223,BSC-224,BSC-225,IFG-300,ICM-311,ICM-312,ICM-313,ICM-314,ICM-315,ICM-316,MFG-114,ICM-321,ICM-322,ICM-323,ICM-324,ICM-325,CFG-1,MFG-216,IMC-411,IMC-412,IMC-413,IMC-414,IMC-415,IMC-416,CFG-2" data-requisitos="BSC-221,BSC-222,BSC-223,BSC-224,BSC-225,IFG-300,ICM-311,ICM-312,ICM-313,ICM-314,ICM-315,ICM-316,MFG-114,ICM-321,ICM-322,ICM-323,ICM-324,ICM-325,CFG-1,MFG-216,IMC-411,IMC-412,IMC-413,IMC-414,IMC-415,IMC-416,CFG-2">Práctica Inicial</div>
     <div class="ramo no-disponible" data-id="ICM-422" data-nombre="Implementación Estratégica" data-descripcion="Requiere ICM-411,ICM-316,ICM-414" data-requisitos="ICM-411,ICM-316,ICM-414">Implementación Estratégica</div>
     <div class="ramo no-disponible" data-id="ICM-423" data-nombre="Gestión de operaciones" data-descripcion="Requiere BSC-215" data-requisitos="BSC-215">Gestión de operaciones</div>
     <div class="ramo no-disponible" data-id="ICM-424" data-nombre="Investigación de Mercados" data-descripcion="Requiere ICM-413,ICM-316" data-requisitos="ICM-413,ICM-316">Investigación de Mercados</div>
-    <div class="ramo no-disponible" data-id="ICM-425" data-nombre="Evaluación de Proyectos" data-descripcion="Sin requisito">Evaluación de Proyectos</div>
+    <div class="ramo no-disponible" data-id="ICM-425" data-nombre="Evaluación de Proyectos" data-descripcion="Requiere BSC-221,BSC-222,BSC-223,BSC-224,BSC-225,IFG-300,ICM-311,ICM-312,ICM-313,ICM-314,ICM-315,ICM-316,MFG-114,ICM-321,ICM-322,ICM-323,ICM-324,ICM-325,CFG-1,MFG-216,IMC-411,IMC-412,IMC-413,IMC-414,IMC-415,IMC-416,CFG-2" data-requisitos="BSC-221,BSC-222,BSC-223,BSC-224,BSC-225,IFG-300,ICM-311,ICM-312,ICM-313,ICM-314,ICM-315,ICM-316,MFG-114,ICM-321,ICM-322,ICM-323,ICM-324,ICM-325,CFG-1,MFG-216,IMC-411,IMC-412,IMC-413,IMC-414,IMC-415,IMC-416,CFG-2">Evaluación de Proyectos</div>
+    <div class="ramo no-disponible" data-id="CFG-3" data-nombre="Certificación III" data-descripcion="Sin requisito">Certificación III</div>
   </div>
   <div class="semestre">
     <h2>Semestre IX</h2>
-    <div class="ramo no-disponible" data-id="ICM-511" data-nombre="Práctica Profesional" data-descripcion="Sin requisito">Práctica Profesional</div>
+    <div class="ramo no-disponible" data-id="ICM-511" data-nombre="Práctica Profesional" data-descripcion="Requiere IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3" data-requisitos="IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3">Práctica Profesional</div>
     <div class="ramo no-disponible" data-id="ICM-512" data-nombre="Contabilidad Gerencial" data-descripcion="Requiere ICM-422" data-requisitos="ICM-422">Contabilidad Gerencial</div>
     <div class="ramo no-disponible" data-id="ICM-513" data-nombre="Estrategia Financiera" data-descripcion="Requiere ICM-422" data-requisitos="ICM-422">Estrategia Financiera</div>
-    <div class="ramo no-disponible" data-id="ICM-514" data-nombre="Seminario de Investigación" data-descripcion="Requiere IFG-300" data-requisitos="IFG-300">Seminario de Investigación</div>
-    <div class="ramo no-disponible" data-id="ICM-515" data-nombre="Diseño de Negocios" data-descripcion="Sin requisito">Diseño de Negocios</div>
+    <div class="ramo no-disponible" data-id="ICM-514" data-nombre="Seminario de Investigación" data-descripcion="Requiere IFG-300,IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3" data-requisitos="IFG-300,IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3">Seminario de Investigación</div>
+    <div class="ramo no-disponible" data-id="ICM-515" data-nombre="Diseño de Negocios" data-descripcion="Requiere IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3" data-requisitos="IMC-421,IMC-422,IMC-423,IMC-424,IMC-425,CFG-3">Diseño de Negocios</div>
   </div>
   <div class="semestre">
     <h2>Semestre X</h2>
-    <div class="ramo no-disponible" data-id="ICM-521" data-nombre="Taller Profesional" data-descripcion="Sin requisito">Taller Profesional</div>
+    <div class="ramo no-disponible" data-id="ICM-521" data-nombre="Taller Profesional" data-descripcion="Requisito IMC-511,IMC-512,IMC-513,IMC-514,IMC-515" data-requisitos="IMC-511,IMC-512,IMC-513,IMC-514,IMC-515">Taller Profesional</div>
     <div class="ramo no-disponible" data-id="ICM-522" data-nombre="Tesis" data-descripcion="Requiere ICM-514" data-requisitos="ICM-514">Tesis</div>
-    <div class="ramo no-disponible" data-id="ICM-523" data-nombre="Electivo I" data-descripcion="Sin requisito">Electivo I</div>
-    <div class="ramo no-disponible" data-id="ICM-524" data-nombre="Electivo II" data-descripcion="Sin requisito">Electivo II</div>
-    <div class="ramo no-disponible" data-id="ICM-525" data-nombre="Electivo III" data-descripcion="Sin requisito">Electivo III</div>
+    <div class="ramo no-disponible" data-id="ICM-523" data-nombre="Electivo I" data-descripcion="Requisito IMC-511,IMC-512,IMC-513,IMC-514,IMC-515" data-requisitos="IMC-511,IMC-512,IMC-513,IMC-514,IMC-515">Electivo I</div>
+    <div class="ramo no-disponible" data-id="ICM-524" data-nombre="Electivo II" data-descripcion="Requisito IMC-511,IMC-512,IMC-513,IMC-514,IMC-515" data-requisitos="IMC-511,IMC-512,IMC-513,IMC-514,IMC-515">Electivo II</div>
+    <div class="ramo no-disponible" data-id="ICM-525" data-nombre="Electivo III" data-descripcion="Requisito IMC-511,IMC-512,IMC-513,IMC-514,IMC-515" data-requisitos="IMC-511,IMC-512,IMC-513,IMC-514,IMC-515">Electivo III</div>
   </div>
-
+  <div id="descripcion" class="descripcion">
+  Haz doble clic en un ramo para marcarlo como aprobado.
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
