--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="ramo no-disponible" data-id="ICM-324" data-nombre="Contabilidad de Gestión" data-descripcion="Requiere ICM-314" data-requisitos="ICM-314">Contabilidad de Gestión</div>
     <div class="ramo no-disponible" data-id="ICM-325" data-nombre="Emprendimiento" data-descripcion="Requiere ICM-311,ICM-316" data-requisitos="ICM-311,ICM-316">Emprendimiento</div>
     <div class="ramo no-disponible" data-id="CFG-1" data-nombre="Certificación I" data-descripcion="Sin requisito">Certificación I</div>
-    <div class="ramo no-disponible" data-id="MFG-216" data-nombre="Ética Cristiana" data-descripcion="Sin requisito">Ética Cristiana</div>
+    <div class="ramo no-disponible" data-id="MFG-216" data-nombre="Ética Cristiana" data-descripcion="MFG-114">Ética Cristiana</div>
     
   </div>
   <div class="semestre">
